Working kill rules

--- a/src/main/resources/assets/tutorial/lang/en_uk.json
+++ b/src/main/resources/assets/tutorial/lang/en_uk.json
@@ -1,4 +1,6 @@
 {
 	"gamerule.showDeathMessagesNamed": "Show named mobs deathes",
-	"gamerule.showDeathMessagesOther": "Show other mobs deathes"
+	"gamerule.showDeathMessagesOther": "Show other mobs deathes",
+	"gamerule.showDeathMessagesNamedKill": "Show named mobs kills",
+	"gamerule.showDeathMessagesOtherKill": "Show other mobs kills"
 }
