--- a/src/main/resources/assets/alldeath/lang/en_us.json
+++ b/src/main/resources/assets/alldeath/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+	"command.alldeathmsg.disable-all.success": "Disabled all death messages",
 	"gamerule.showDeathCoordinates": "Show death coordinates",
 	"gamerule.showDeathCoordinates.description": "Advanced tooltip will show an entity's coordinate, when hovering its name in the chat.",
 	"gamerule.showDeathMessages.all.death": "Show ALL Death Messages",
@@ -24,5 +25,6 @@
 	"gamerule.showDeathMessages.persistent.death": "Show persistent mobs deathes",
 	"gamerule.showDeathMessages.persistent.kill":  "Show persistent mobs kills",
 	"gamerule.showDeathMessages.persistent.death.description": "Mobs that cannot naturally despawn",
-	"gamerule.showDeathMessages.persistent.kill.description":  "Mobs that cannot naturally despawn"
+	"gamerule.showDeathMessages.persistent.kill.description":  "Mobs that cannot naturally despawn",
+	"gui.alldeath.entity_tooltip.location": "(%s) in %s"
 }
