--- a/src/main/resources/assets/alldeath/lang/en_us.json
+++ b/src/main/resources/assets/alldeath/lang/en_us.json
@@ -1,5 +1,7 @@
 {
 	"command.alldeathmsg.disable-all.success": "Disabled all death messages",
+	"command.alldeathmsg.see-enabled.dailure": "There are no enabled death messages",
+	"command.alldeathmsg.see-enabled.success": "Enabled death messages:",
 	"command.alldeathmsg.set.failure": "Invalid rule name: %s.%s",
 	"gamerule.showDeathCoordinates": "Show death coordinates",
 	"gamerule.showDeathCoordinates.description": "Advanced tooltip will show an entity's coordinate, when hovering its name in the chat.",
