--- a/src/main/resources/assets/alldeath/lang/en_us.json
+++ b/src/main/resources/assets/alldeath/lang/en_us.json
@@ -1,6 +1,7 @@
 {
+	"command.alldeathmsg.disable-all.failure": "Command requires confirmation",
 	"command.alldeathmsg.disable-all.success": "Disabled all death messages",
-	"command.alldeathmsg.see-enabled.dailure": "There are no enabled death messages",
+	"command.alldeathmsg.see-enabled.failure": "There are no enabled death messages",
 	"command.alldeathmsg.see-enabled.success": "Enabled death messages:",
 	"command.alldeathmsg.set.failure": "Invalid rule name: %s.%s",
 	"gamerule.showDeathCoordinates": "Show death coordinates",
