--- a/src/main/resources/assets/alldeath/lang/en_us.json
+++ b/src/main/resources/assets/alldeath/lang/en_us.json
@@ -4,6 +4,8 @@
 	"command.alldeathmsg.see-enabled.failure": "There are no enabled death messages",
 	"command.alldeathmsg.see-enabled.success": "Enabled death messages:",
 	"command.alldeathmsg.set.failure": "Invalid rule name: %s.%s",
+	"gamerule.category.alldeath.death": "Death Messages",
+	"gamerule.category.alldeath.kill": "Kill Messages",
 	"gamerule.showDeathCoordinates": "Show death coordinates",
 	"gamerule.showDeathCoordinates.description": "Advanced tooltip will show an entity's coordinate, when hovering its name in the chat.",
 	"gamerule.showDeathMessages.all.death": "Show ALL Death Messages",
